--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
             <a href="https://wa.me/08112357947" target="_blank" style="color:#25D366 ;"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
     </div>
-
     <section class="end">
         <div class="last-text">
-            <p> @ Babalola Rotimi {dev.babs} 2023. All Rights Reserved.</p>
+            <p> @ Babalola Rotimi Favour {dev.babs} 2023. All Rights Reserved.</p>
         </div>
     </section>   
 </body>
